상품등록 서버기능 완성